# live-elements-js-compiler

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  index.js  package.json
.github/workflows/: .build_live-elements-js-compiler.yml
config/: qt.cmake  qtConfig.js
lib/: CMakeLists.txt
lib/lvbase/: CMakeLists.txt
lib/lvbase/src/: bytebuffer.cpp  directory.cpp  exception.cpp  exception.h  library_win.cpp  module.cpp  modulecontext.h  package.cpp  package.h  packagegraph.cpp  packagegraph.h  path.cpp  sourcelocation.cpp  sourcelocation.h  utf8.cpp  utf8.h  visuallog.cpp
lib/lvelements/compiler/: CMakeLists.txt  grammar.json  node-types.json
lib/lvelements/compiler/include/live/elements/compiler/: languagedescriptors.h
lib/lvelements/compiler/src/: compiler.cpp  compiler.h  cursorcontext.cpp  cursorcontext.h  elementsmodule.cpp  elementsmodule.h  elementssections_p.h  languagedescriptors.cpp  languagedescriptors.h  languageinfo.cpp  languagenodes.cpp  languagenodes_p.h  languagenodestojs.cpp  languagenodestojs_p.h  languageparser.cpp  languageparser.h  languagequery.cpp  languagequery.h  modulefile.cpp  modulefile.h  parseddocument.cpp
lib/lvelements/compiler/test/unit/: parseerrortest.cpp  parsetest.cpp
lib/lvelements/compiler/test/unit/data/: ParserErrorTest04.lv  ParserErrorTest05.lv  ParserErrorTest06.lv  ParserTest01.lv  ParserTest01.lv.d.ts  ParserTest01.lv.js  ParserTest02.lv  ParserTest02.lv.d.ts  ParserTest02.lv.js  ParserTest03.lv  ParserTest03.lv.d.ts  ParserTest03.lv.js  ParserTest04.lv  ParserTest04.lv.d.ts  ParserTest04.lv.js  ParserTest05.lv  ParserTest05.lv.d.ts  ParserTest05.lv.js  ParserTest06.lv  ParserTest06.lv.d.ts  ParserTest06.lv.js  ParserTest07.lv  ParserTest07.lv.d.ts  ParserTest07.lv.js  ParserTest08.lv.d.ts  ParserTest09.lv  ParserTest09.lv.d.ts  ParserTest09.lv.js  ParserTest10.lv.d.ts  ParserTest11.lv.d.ts  ParserTest12.lv.d.ts  ParserTest13.lv.d.ts  ParserTest14.lv  ParserTest14.lv.d.ts  ParserTest14.lv.js  ParserTest15.lv  ParserTest15.lv.d.ts  ParserTest15.lv.js  ParserTest16.lv  ParserTest16.lv.d.ts  (+100 more)
lib/lvelements/src/compiler/: compiler.cpp  compiler.h  elementsmodule.cpp  languagenodes.cpp  languagenodes_p.h
scripts/: downloadbinary.js  downloadbinary.mjs  setupqt.js  update-libraries.js
src/: compilerhandle.cpp  compilerhandle.h  compilerwrap.cpp  compilerwrap.h
test/: test.js  test.mjs
test/lib/: file-tester.mjs
